--- a/package.json
+++ b/package.json
@@ -18,8 +18,15 @@
     "@angular/platform-browser": "~12.0.0",
     "@angular/platform-browser-dynamic": "~12.0.0",
     "@angular/router": "~12.0.0",
+    "bootstrap": "^5.0.1",
+    "file-saver": "^2.0.5",
+    "font-awesome": "^4.7.0",
+    "ng2-order-pipe": "^0.1.5",
+    "ngx-pagination": "^5.1.0",
+    "ngx-toastr": "^13.2.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
+    "xlsx": "^0.17.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
